# cmake-project-skeleton

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  NOTICE.md  README.md  pyproject.toml  test.py
docs/: HOW_TO.md
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
src/Core/Src/: main.c  stm32f7xx_it.c  system_stm32f7xx.c
src/SW4STM32/: CMakeLists.txt
src/app/: main.c
test/: CMakeLists.txt  gmock_test_case.cpp  google_test_case.cpp  test_suite.c
